<resources>
    <string name="app_name">DrComputer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit Profile</string>
    <string name="logout">LogOut</string>
    <string name="myPost">My Post</string>
</resources>