<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/mainPageFrame"
    tools:context=".mainPageFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</LinearLayout>