<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFrameArrow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.myProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/backArrow"
            android:name="com.example.drcomputer.fragments.arrowBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/InsideTopFrameLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".myProfileFrameInside">
        <LinearLayout
            android:id="@+id/profileFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".fragments.myProfileFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/profile"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userNameProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/userName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_myPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/my_primary"
                android:text="@string/myPost" />
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/my_primary"
                android:text="@string/edit" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/my_primary"
                android:text="@string/logout" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

